# cap_services

cap_services/: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
cap_services/accounts/: decorators.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
cap_services/accounts/migrations/: 0001_initial.py
cap_services/admin_panel/: apps.py  decorators.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
cap_services/admin_panel/migrations/: 0001_initial.py
cap_services/cap_services/: asgi.py  settings.py  urls.py  wsgi.py
cap_services/core/: admin.py  apps.py  context_processors.py  decorators.py  enums.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
cap_services/core/migrations/: 0001_initial.py  0002_alter_activitylog_model_name.py
cap_services/core/templatetags/: core_tags.py
cap_services/orders/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
cap_services/orders/migrations/: 0001_initial.py
cap_services/staff/: apps.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
cap_services/staff/migrations/: 0001_initial.py  0002_department_staffdepartment.py
cap_services/store/: apps.py  filters.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
cap_services/store/migrations/: 0001_initial.py
cap_services/templates/accounts/: add_address.html  addresses.html  edit_address.html  forgot_password.html  login.html  profile.html  register.html  reset_password.html
cap_services/templates/admin_panel/: alerts.html  announcements.html  base.html  categories.html  category_confirm_delete.html  category_form.html  create_announcement.html  dashboard.html  edit_announcement.html  inventory.html  (+17 more)
(+77 files in other folders)
