
---

### **5. pyproject.toml**
```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cap_services"
version = "1.0.0"
description = "CAP Services E-Commerce Platform"
readme = "README.md"
authors = [
    {name = "CAP Services", email = "info@capservices.com"}
]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Customers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["ecommerce", "django", "computer sales", "services"]
requires-python = ">=3.11, <3.12"
dependencies = [
    "Django==4.2.11",
    "pillow==10.3.0",
    "python-dotenv==1.0.1",
    "django-crispy-forms==2.1",
    "crispy-bootstrap5==0.7",
    "psycopg2-binary==2.9.9",
    "celery==5.3.6",
    "redis==5.0.3",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "djangorestframework==3.15.1",
    "django-money==3.4.0",
    "django-phonenumber-field==7.3.0",
    "phonenumbers==8.13.37",
]

[project.urls]
Homepage = "https://capservices.com"
Repository = "https://github.com/capservices/cap_services"
Documentation = "https://docs.capservices.com"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
minversion = "7.0"
DJANGO_SETTINGS_MODULE = "cap_services.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]